Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- Módulo 1 -->
     <button data-modulo="1" class="btn modulo-btn">📘 Módulo 1</button>
     <div id="submenu1" class="submenu">
-      <button class="sub-btn" data-link="modulo1-2-3/calc-simple.html">Calculadora Simple</button>
+      <button class="sub-btn" data-link="portfolio javascript/modulo1-2-3/calc-simple.html">Calculadora Simple</button>
       <button class="sub-btn" data-link="modulo1-2-3/adivina.html">Adivina el Número</button>
       <button class="sub-btn" data-link="modulo1-2-3/tablas.html">Generador de Tablas</button>
     </div>
@@ -170,4 +170,5 @@
 </script>
 
 </body>
+
 </html>
